adl-frontend/src/test/resources/unit/error/semantic/idlRefs/ref1.adl
//#SemanticError GroupId=MIDL ErrorId=IDL_NOT_FOUND line=6

primitive idlRefs.ref1 {

  provides api.Call as sItf;
  requires foo.unknownIDL as cItf;
  
  source {{ }};
}
